c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/union_decl_extra_semicolon.c
// Stray semicolon in union declaration
union u {
    int a;
    ;
};

int main(void) {
    return 0;
}